[package]
name = "rustchain"
version = "0.1.0"
authors = ["Marcin Skwarek <m.skwarek@stud.elka.pw.edu.pl>"]

[dependencies]
time = "0.1"
rust-crypto = "^0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-serialize = "0.3.24"
uuid = { version = "0.6", features = ["v4"] }
env_logger = "0.5.3"
log = "0.4.1"
hyper = "0.12.10"
futures = "0.1.17"
lazy_static = "0.2"
url = "1.6.0"
pretty_env_logger = "0.2.0"
